--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* Color customization */
 :root {
-  --primary: #f9c412;
-  --primary-dark: #E7BF60;
+  --primary: #F7B32B;
+  --primary-dark: #2F3061;
 }
 
 .test-dead-code-eimination-sentinel {
