--- a/index.njk
+++ b/index.njk
@@ -1,18 +1,17 @@
 ---
-title: Title. Update me.
+title: Class notes.
 layout: layouts/home.njk
-description: Description. Update me.
+description: These are a bunch of mathematical and scientific notes on various subjects and topics. 
 image: https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg
 date: Last Modified
 ---
 
 <p>
-  This is a demo website based on 
-  <a href="https://www.industrialempathy.com/posts/eleventy-high-performance-blog/">eleventy-high-performance-blog</a>.
+  These are a bunch of mathematical and scientific notes on various subjects and topics. 
 </p>
 
 <div id="posts">
-  <h2>Posts</h2>
+  <h2>Notes</h2>
   {% set postslist = collections.posts %}
   {% include "postslist.njk" %}
 </div>
