removed post disclaimer because it did not render

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -81,7 +81,7 @@
     </main>
 
     <footer>
-      <a href="/about/">{{ metadata.author.name }}</a>
+      <a href="/about/">{{ metadata.author.name }}</a><br>
     </footer>
 
     <!-- Current page: {{ page.url | url }} -->
