--- a/index.njk
+++ b/index.njk
@@ -2,7 +2,7 @@
 title: Class notes.
 layout: layouts/home.njk
 description: These are a bunch of mathematical and scientific notes on various subjects and topics. 
-image: https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg
+image: https://og.srg.codes/%23%23%20Class%20notes.png?theme=light&md=1&square=0&fontSize=100px&border=%3Bbackground%3Anone&images=https%3A%2F%2Fcdn.srg.codes%2Fimages%2Ficon%2Ficon.svg&widths=auto&bgimage=https%3A%2F%2Funsplash.com%2Fphotos%2F1_CMoFsPfso%2Fdownload%3Fforce%3Dtrue%26w%3D1920
 date: Last Modified
 ---
 
