--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -27,7 +27,7 @@ a {
 
 .accordion__title {
   background-color: #f4f4f4;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 600;
   color: #444;
   cursor: pointer;
@@ -43,7 +43,7 @@ a {
 
 .accordion__body {
   padding: 20px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 500;
   display: block;
   animation: fadein 0.35s ease-in;
